[package]
name = "f12020"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.12.0"

[dev-dependencies]
tui = {version = "0.15", default-features = false, features = ["crossterm"]}
crossterm = "0.20"
chrono = "0.4"
