[package]
name = "f12022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.13.0"

[dev-dependencies]
tui = {version = "0.17.0", default-features = false, features = ["crossterm"]}
crossterm = "0.20.0"
chrono = "0.4.0"
